# pionner_navigation

gps_extension/: CMakeLists.txt  package.xml  package.xml~
gps_extension/launch/: gps.launch~  gps_extension.launch
gps_extension/src/: UTM_converter.cpp  UTM_converter.cpp~
messages/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
messages/msg/: gps_extension.msg  gps_extension.msg~  sector_info.msg  waypoints_info.msg
piooner_xbox_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
piooner_xbox_controller/launch/: joystick_teleop_piooner.launch~  xbox_controller.launch~
piooner_xbox_controller/src/: joystick2piooner.cpp~
set_waypoints/: CMakeLists.txt  package.xml
set_waypoints/launch/: ar_drone_waypoints.launch  waypoints.launch  waypoints.launch~
set_waypoints/src/: ar_drone_set_waypoints.cpp  set_waypoints.cpp  set_waypoints.cpp~
